BUG - Minor bug fixed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <table class="balance-box hidden">
             <tr class="notes">
+                <th>Notes:</th>
                 <th>₹2000</th>
                 <th>₹500</th>
                 <th>₹100</th>
@@ -39,6 +40,7 @@
                 <th>₹1</th>
             </tr>
             <tr class="display-result">
+                <td class="table-desc">No. of Notes:</td>
                 <td class="two-thousand"> </td>
                 <td class="five-hundred"> </td>
                 <td class="hundred"> </td>
