Docs - Readme file added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <div class="heading-box">
             <h1 class="heading">Cash Register</h1>
-            <p class="description">Cash Register helps you return the notes to the customer by entering bill amount and cash given by customer.</p>
+            <p class="description">Cash Register helps in returning the money to the customer by entering the bill amount and the cash amount given by the customer.</p>
         </div>
          <div class="input-box">
             <label class="bill">
